--- a/assets/stylesheets/default.css
+++ b/assets/stylesheets/default.css
@@ -7,61 +7,23 @@ h1 {
 
 	margin-top: 1em;
 	margin-bottom: 1em;
-	text-align:center;
-	margin-left:auto;
-	margin-right:auto;
+
 	border-bottom: 1px solid #BBBBBB;
 	padding-bottom: 0.2em;
-	font: bold 40px Arial, sans-serif
+
+	text-align: center;
 }
-h2 {
-
-	text-align:center;
-	position:absolute;
-	bottom: 5px;
-	left: 565px;
-
-}
-h3 {
-	text-align:center;
-	position:absolute;
-	bottom: 375px;
-	left:535px;
-		color: #3e5706;
-	font: bold 18px/25px Arial, sans-serif;
-
-}
-h4 {
-	text-align:center;
-	position:absolute;
-	bottom:400px;
-	left:600px;
-	color:#3e5706;
-	font: bold 18px/25px Arial, sans-serif;
-}
-
-h5 {
-	text-align:center;
-	position:absolute;
-	bottom: 200px;
-	left: 430px;
-
-}
-
-h6{
-	text-align:center;
-	position:absolute;
-	bottom:280px;
-	left:470px;
-	color:#3e5706;
-	font: bold 18px/25px Arial, sans-serif;
-}
-
-
-
 
 nav ul {
 	list-style-type: none;
+}
+
+footer {
+	text-align: center;
+}
+
+.nav-main {
+	text-align: center;
 }
 
 .navbar {
@@ -72,54 +34,84 @@ nav ul {
 
 	vertical-align: middle;
 }
+
+	.navbar nav {
+		height: 100%;
+	}
+
 	.navbar .brand {
 		float: left;
-		display: block;
+		display: inline-table;
 		height: 100%;
-
-		line-height: 50px;
 
 		margin-left: 10px;
 
 		font-size: 2em;
 	}
-	.navbar nav {
+	.navbar .brand > a {
+		height: 100%;
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	.navbar ul {
 		float: right;
 		display: block;
 		height: 100%;
-		margin-right: 10px;
+
+		padding: 0;
+		margin: 0;
+
+		padding-right: 5px;
 	}
-		.navbar nav ul {
-			padding: 0;
-		}
-		.navbar nav li {
-			display: block;
-			padding-left: 5px;
-			padding-right: 5px;
-		}
+	.navbar li {
+		float: right;
+		height: 100%;
+		display: inline-table;
+
+		text-align: center;
+
+		margin: 0;
+		padding: 0;
+	}
+	.navbar li > a {
+		background-color: rgb(130, 160, 255);
+		height: 100%;
+		display: table-cell;
+
+		vertical-align: middle;
+
+		padding-left: 10px;
+		padding-right: 10px;
+
+		border-style: solid;
+		border-color: rgb(110, 140, 255);
+		border-top-width: 0;
+		border-bottom-width: 0;
+		border-left-width: 1px;
+		border-right-width: 1px;
+	}
+	.navbar li > a:hover {
+		background-color: rgb(110, 140, 255);
+	}
 
 .main {
 	margin-left: 70px;
 	margin-right: 70px;
 }
- .button {
+
+.button {
 	display: inline-block;
-	position: relative;
 	margin: 10px;
 	padding: 0 20px;
 	text-align: center;
 	text-decoration: none;
+
 	font: bold 12px/25px Arial, sans-serif;
 
-	text-shadow: 1px 1px 1px rgba(255,255,255, .22);
-
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
 	border-radius: 30px;
-
-	-webkit-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-	-moz-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
 	box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
+	text-shadow: 1px 1px 1px rgba(255,255,255, .22);
 
 	-webkit-transition: all 0.15s ease;
 	-moz-transition: all 0.15s ease;
@@ -144,54 +136,12 @@ nav ul {
 }
 
 
- .Medbutton {
-	display: inline-block;
-	position: relative;
-	margin: 10px;
-	padding: 0 20px;
-	text-align: center;
-	text-decoration: none;
+.button-action {
 	font: bold 30px/40px Arial, sans-serif;
-
-	text-shadow: 1px 1px 1px rgba(255,255,255, .22);
-
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-
-	-webkit-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-	-moz-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-	box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-
-	-webkit-transition: all 0.15s ease;
-	-moz-transition: all 0.15s ease;
-	-o-transition: all 0.15s ease;
-	-ms-transition: all 0.15s ease;
-	transition: all 0.15s ease;
 }
 
- .Bigbutton {
-	display: inline-block;
-	position: relative;
-	margin: 10px;
-	padding: 0 20px;
-	text-align: center;
-	text-decoration: none;
+.button-main {
 	font: bold 42px/55px Arial, sans-serif;
-
-	text-shadow: 1px 1px 1px rgba(255,255,255, .22);
-
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-
-	-webkit-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-	-moz-box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-	box-shadow: 1px 1px 1px rgba(0,0,0, .29), inset 1px 1px 1px rgba(255,255,255, .44);
-
-	-webkit-transition: all 0.15s ease;
-	-moz-transition: all 0.15s ease;
-	-o-transition: all 0.15s ease;
-	-ms-transition: all 0.15s ease;
-	transition: all 0.15s ease;
+	color: #19667d;
+	background: #70c9e3;
 }
