--- a/assets/stylesheets/default.css
+++ b/assets/stylesheets/default.css
@@ -18,6 +18,15 @@ nav ul {
 	list-style-type: none;
 }
 
+label {
+	display: inline-block;
+	width: 100px;
+	text-align: right;
+}
+input {
+	display: table-cell;
+}
+
 footer {
 	text-align: center;
 }
@@ -118,6 +127,21 @@ footer {
 	-o-transition: all 0.15s ease;
 	-ms-transition: all 0.15s ease;
 	transition: all 0.15s ease;
+}
+
+.well {
+	background-color:#a5cd4e;
+	max-width:550px;
+	border-radius:25px;
+
+	text-align:center;
+
+	margin-left:auto;
+	margin-right:auto;
+
+	padding: 10px;
+
+	display: table;
 }
 
 .green {
