Clean up assign award page.

--- a/assets/stylesheets/default.css
+++ b/assets/stylesheets/default.css
@@ -144,6 +144,11 @@ footer {
 	display: table;
 }
 
+.divider {
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
 .error-message {
 	color:red;
 	text-align:center;
