--- a/assets/stylesheets/default.css
+++ b/assets/stylesheets/default.css
@@ -155,6 +155,14 @@ footer {
 	padding-bottom: 15px;
 }
 
+.tiles {
+	text-align: center;
+}
+
+.tile {
+	display: inline-block;
+}
+
 .green {
 	color: #3e5706;
 	background: #a5cd4e;
